[package]
name = "mmm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
lazy_static = "1.4.0"
dirs = "3"
chrono = "0.4.19"
fstream = "0.1.2"
csv2svg = "0.1.5"
serde_json = "1"
surf = "2.3.1"
serde = "1"