[package]
name = "mmm"
version = "0.1.0"
edition = "2018"
authors = ["Grant Handy <grantshandy@gmail.com>"]
description = "Make Me Moist - a sprinkler control system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.8"
fstream = "0.1"
chrono = "0.4"
ureq = "2"
serde_json = "1"
dirs = "3"
clap = "2"
charts = { git = "https://github.com/grantshandy/rustplotlib" }
# charts = { path = "../rustplotlib" }
fastrand = "1.5.0"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = "0.12.0"