[package]
name = "mmm-http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
mmm-core = { path = "../mmm-core" }
lazy_static = "1.4.0"
once_cell = "1"
# async-std = { version = "1", features = ["attributes"] }